# optitrade

./: .claudeignore  .env.example  .gitignore  Makefile  README.md  manifest  plan.md
.beads/: metadata.json
.cursor/commands/: spec-kitty.accept.md  spec-kitty.merge.md
.kittify/: .dashboard  config.yaml  metadata.yaml
.kittify/memory/: constitution.md
.kittify/scripts/: repair-spec-kitty-merge-preflight.py
.kittify/workspaces/: 001-autonomous-deribit-options-robot-WP01.json  001-autonomous-deribit-options-robot-WP02.json  001-autonomous-deribit-options-robot-WP03.json  001-autonomous-deribit-options-robot-WP04.json  001-autonomous-deribit-options-robot-WP05.json  001-autonomous-deribit-options-robot-WP06.json  001-autonomous-deribit-options-robot-WP07.json  001-autonomous-deribit-options-robot-WP08.json  001-autonomous-deribit-options-robot-WP09.json  001-autonomous-deribit-options-robot-WP10.json  001-autonomous-deribit-options-robot-WP11.json  001-autonomous-deribit-options-robot-WP12.json  001-autonomous-deribit-options-robot-WP13.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
config/examples/: policy.example.json
docs/: quickstart.md  research.md  runbook-incident.md  trader-safety-cheatsheet.md
execution/: go.mod  go.sum
research/: pyproject.toml
research/src/optitrade_research/: __init__.py
specs/002-dashboard-operator-trading/: plan.md  (+5 more)
src/: go.mod  go.sum
web/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+292 files in other folders)
